# pyMetricCli

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
doc/: README.md
doc/design/profile_mgmt/: profile_mgmt.md
doc/uml/: architecture.puml  deployment.puml
examples/: README.md  config.json
examples/adapter/: adapter.py
src/pyMetricCli/: __main__.py  adapter_interface.py  jira.py  polarion.py  ret.py  superset.py  version.py
src/template_python/: __main__.py  version.py
