[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pyMetricCli"
version = "1.0.4"
description = "pyMetricCli is a collection of scripts and API implementations for generating and playing with metrics."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gabryel Reyes", email = "gabryel.reyes@newtec.de" },
    { name = "Juliane Kerpe", email = "juliane.kerpe@newtec.de" },
    { name = "Stefan Vogel", email = "stefan.vogel@newtec.de" }
]
license = {text = "BSD 3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

dependencies = [
    "toml>=0.10.2",
    "pyJiraCli@git+https://github.com/NewTec-GmbH/pyJiraCli",
    "pyPolarionCli@git+https://github.com/NewTec-GmbH/pyPolarionCli",
    "pySupersetCli@git+https://github.com/NewTec-GmbH/pySupersetCli",
    "pyProfileMgr@git+https://github.com/NewTec-GmbH/pyProfileMgr.git@feature/profile_mgmt_lib"
]

[project.optional-dependencies]
test = [
  "pytest > 5.0.0",
  "pytest-cov[all]"
]

[project.urls]
documentation = "https://github.com/NewTec-GmbH/pyMetricCli"
repository = "https://github.com/NewTec-GmbH/pyMetricCli"
tracker = "https://github.com/NewTec-GmbH/pyMetricCli/issues"

[project.scripts]
pyMetricCli = "pyMetricCli.__main__:main"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.setuptools.package-data]
pyMetricCli = ["pyproject.toml"]
