[metadata]
name = template_python
version = attr: template_python.version.__version__
description = template_python
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/NewTec-GmbH/template_python
author = template_python
author_email = template_python@newtec.de
license = BSD 3-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD 3-Clause
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls = 
    Documentation = https://github.com/NewTec-GmbH/template_python
    Source = https://github.com/NewTec-GmbH/template_python
    Tracker = https://github.com/NewTec-GmbH/template_python/issues

[options]
package_dir=
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    toml>=0.10.2
python_requires = >=3.9
setup_requires =
    setuptools_scm
    wheel
    toml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    template_python = template_python.__main__:main
