[metadata]
name = pyMetricCli
version = attr: pyMetricCli.version.__version__
description = pyMetricCli is a collection of scripts and API implementations for generating and playing with metrics.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/NewTec-GmbH/pyMetricCli
author = Juliane Kerpe
author_email = juliane.kerpe@newtec.de
license = BSD 3-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD 3-Clause
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls = 
    Documentation = https://github.com/NewTec-GmbH/pyMetricCli
    Source = https://github.com/NewTec-GmbH/pyMetricCli
    Tracker = https://github.com/NewTec-GmbH/pyMetricCli/issues

[options]
package_dir=
    =src
packages = find:
zip_safe = False
platforms = any
include_package_data = True
install_requires =
    toml>=0.10.2
python_requires = >=3.9
setup_requires =
    setuptools_scm
    wheel
    toml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    pyMetricCli = pyMetricCli.__main__:main
